[tool.poetry]
name = "mplanner"
version = "0.1.0"
description = ""
authors = ["AnugunjNaman <anugunjjha@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.3"
pytest = "^8.3.3"
plotly = "^5.24.1"
pandas = "^2.2.3"
open3d = "^0.18.0"
scikit-learn = "^1.5.2"
pyyaml = "^6.0.2"
addict = "^2.4.0"
pillow = "^11.0.0"
tqdm = "^4.67.0"
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.44"
pymdown-extensions = "^10.12"
mkdocstrings = "^0.27.0"
mknotebooks = "^0.8.0"
mkdocs-autorefs = "^1.2.0"
mkdocs-material-extensions = "^1.3.1"
nbconvert = "^7.16.4"
pytkdocs-tweaks = "^0.0.8"
mkdocs-include-exclude-files = "^0.0.1"
notebook = "^7.2.2"
mkdocstrings-python = "^1.12.2"
mkdocs-gen-files = "^0.5.0"
mkdocs-literate-nav = "^0.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
